@@ -20,6 +20,7 @@ MovieJukebox 2.2 BETA
   - Fixed defect #1627 ImdbPlugin - bug with plot
   - Fixed defect #1628 NFO Premiered date error
   - Fixed defect #1633 Updated Sratim plugin for new website design
+  - Fixed defect #1636 TheMovieDbPlugin better handling of non-English languages and movies
   - Fixed defect #1639 CdonPosterPlugin not working after site restructure
   - Fixed defect #1641 HDDVDs are identified incorrectly in <videoSouce> tag in XML
 
